--- a/estilo.css
+++ b/estilo.css
@@ -18,15 +18,11 @@ body{
 .grid-container > * {
     box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
     border-radius: 4px;
-    padding: 10px;
     text-align: center;
 }
 
 
-.navbar{
-    grid-area: navbar;
-    background-color: grey;
-}
+
 /* ------------------------------------------------------------------------ */
 /* INICIO NAV */
 
@@ -35,6 +31,7 @@ body{
     background-color: grey;
     position:fixed;
     width: 100%;
+    height: 39px;
     display: flex;
     justify-content: center;
     position: fixed;
@@ -48,25 +45,25 @@ body{
 .nav-lista{
     display: flex;
     margin-right: 2rem;
-}
-
-ul{
     list-style: none;
+    text-shadow: white 3px 1px 3px;
+    margin-top: 7px;
 }
 
-a{
+.nav-li-a{
     text-decoration: none;
     margin: 10px;
     color: black;
 }
 
-li:hover{
+.nav-li:hover{
       transform: translateY(8px);
       transition: transform 0.3s ease-out;
 }
 
-a:hover{
+.nav-li-a:hover{
       color: white;
+      text-shadow: black 3px 3px 2px;
 }
 
 /* FIN NAV */
