--- a/estilo.css
+++ b/estilo.css
@@ -10,14 +10,13 @@ html{
 }
 
 body{
-    font-family: sans-serif;
+    font-family:'Courier New', Courier, monospace;
     font-size: 1.2rem;
     min-height: 100%;
 }
 
 .grid-container > * {
     box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
-    border-radius: 4px;
     text-align: center;
 }
 
@@ -46,8 +45,10 @@ body{
     display: flex;
     margin-right: 2rem;
     list-style: none;
-    text-shadow: white 3px 1px 3px;
+    text-shadow: white 2px 2px 2px;
     margin-top: 7px;
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 
 .nav-li-a{
@@ -143,7 +144,7 @@ body{
 /* INICIO PROYECTOS */
 .section4{
     grid-area: section4;
-    background-color:darkkhaki;
+    background-image: url(Fondo.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
