--- a/estilo.css
+++ b/estilo.css
@@ -215,7 +215,7 @@ body{
 /* INICIO CONTACTO */
 .section5{
     grid-area: section5;
-    background-color:darkkhaki;
+    background-image: url(Fondo.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -256,7 +256,12 @@ body{
 
 .footer{
     grid-area: footer;
-    background-color:cornsilk;
+    background-color:black;
+}
+.footer-h2{
+    color: gray;
+    font-size: 1.2rem;
+    margin-top: 15px;
 }
 
 .grid-container{
